--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#app {
+#home {
   text-align: center;
   background-color: #282c34;
   min-height: 100vh;
@@ -15,6 +15,10 @@
   justify-content: center;
   font-size: calc(16px + 1.5vw);
   color: white;
+}
+
+input {
+  font-size: 20px;
 }
 
 a {
